--- a/FinalCode/templates/index.html
+++ b/FinalCode/templates/index.html
@@ -204,6 +204,19 @@
       <h3>Your Result: {{prediction}}</h3>
       <input type="submit" value="Predict" />
     </form>
+
+    <footer>
+      <p>Project made by</p>
+      <p>&copy; Japan Ajit Singh Gandhi, CO21326</p>
+      <i class="fa-brands fa-github-square"
+        ><a href="https://github.com/Japan-Gandhi/Obesity-Predictor"> </a
+      ></i>
+      <p>
+        <a href="https://github.com/Japan-Gandhi/Obesity-Predictor">
+          <img src="{{ url_for('static', filename='github.png')}}" />
+        </a>
+      </p>
+    </footer>
   </body>
   <script src="" async defer></script>
 </html>
