--- a/FinalCode/static/style.css
+++ b/FinalCode/static/style.css
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 20px;
+  /* margin: 20px; */
   font-family: roboto;
   /* background-color: #bdd0fb; */
 }
@@ -121,4 +121,31 @@ form input[type="submit"]{
 form input[type="submit"]:hover {
   background-color: rgb(146, 251, 146);
   transition: ease-in-out 0.2s;
+}
+
+
+footer
+{
+  margin-top: 40px;
+  margin-bottom: 0;
+  text-align: center; 
+  padding: 5px;
+  font-family: poppins;
+  font-weight: 700;
+  /* border: 3px solid black; */
+  /* position: absolute; */
+  /* bottom: 0; */
+  background-color: #dcf1fa;
+  width: 100vw;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+footer p{
+  margin: 2px;
+}
+
+footer img
+{
+  height: 20px;
+  width: 20px;
 }
